<resources>
    <string name="app_name">MiniJeu_DevMobile</string>
    <string name="BUTTON_PLUS" translatable="false">+</string>
    <string name="BUTTON_MINUS" translatable="false">-</string>
    <string name="BUTTON_MULT" translatable="false">*</string>
    <string name="BUTTON_DIV" translatable="false">/</string>
    <string name="BUTTON_9" translatable="false">9</string>
    <string name="BUTTON_8" translatable="false">8</string>
    <string name="BUTTON_7" translatable="false">7</string>
    <string name="BUTTON_6" translatable="false">6</string>
    <string name="BUTTON_5" translatable="false">5</string>
    <string name="BUTTON_4" translatable="false">4</string>
    <string name="BUTTON_3" translatable="false">3</string>
    <string name="BUTTON_2" translatable="false">2</string>
    <string name="BUTTON_1" translatable="false">1</string>
    <string name="BUTTON_0" translatable="false">0</string>
    <string name="btn_clear">Vider</string>
    <string name="btn_validation">Valider</string>
</resources>